feat: Form first validation

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -11,7 +11,9 @@ html {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="email"],
+input[type="password"],
+textarea {
   border: thin solid #dedede;
   border-radius: 0.25rem;
   padding: 0.75rem;
@@ -22,6 +24,11 @@ input[type="password"] {
   font-size: 1rem;
   line-height: 1;
   background-color: transparent;
+}
+
+textarea{
+  font-family: inherit;
+  resize: none;
 }
 
 button,
